--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_property
+name: MyProperty
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -26,6 +26,7 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.20.1
+  flutter_spinkit: ^4.1.2
   provider: ^4.3.3
 
 dev_dependencies:
