--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^0.16.0+1
-  cupertino_icons: ^1.0.0
-  firebase_auth: ^0.20.1
+  cloud_firestore: ^1.0.2
+  firebase_auth: ^1.0.1
   flutter_spinkit: ^4.1.2
-  provider: ^4.3.3
+  flutter_datetime_picker: ^1.5.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
