--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   flutter_datetime_picker: ^1.5.0
   provider: ^5.0.0
+  uuid: ^3.0.2
 
 dev_dependencies:
   flutter_test:
