--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^1.0.2
   firebase_auth: ^1.0.1
+  firebase_storage: ^8.0.0
   flutter_spinkit: ^4.1.2
   flutter_datetime_picker: ^1.5.0
+  multi_image_picker: ^4.8.0
   provider: ^5.0.0
   uuid: ^3.0.2
 
