--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.0
   multi_image_picker: ^4.8.0
   provider: ^5.0.0
+  auto_size_text: ^2.1.0
   uuid: ^3.0.2
 
 dev_dependencies:
