--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   multi_image_picker: ^4.8.0
   provider: ^5.0.0
   auto_size_text: ^2.1.0
+  cached_network_image: ^3.0.0
   uuid: ^3.0.2
 
 dev_dependencies:
