--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   auto_size_text: ^2.1.0
   cached_network_image: ^3.0.0
   uuid: ^3.0.2
+  map: ^0.3.0
 
 dev_dependencies:
   flutter_test:
