--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_map: any
   http: any
   geolocator: ^7.0.3
+  extended_image: ^4.0.1
 
 dev_dependencies:
   flutter_test:
