--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   http: any
   geolocator: ^7.0.3
   extended_image: ^4.0.1
-
+  device_apps: ^2.1.1
+  url_launcher: ^5.2.5
+  font_awesome_flutter: ^9.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
