--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   device_apps: ^2.1.1
   url_launcher: ^5.2.5
   font_awesome_flutter: ^9.0.0
+  country_code_picker: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
