--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^5.2.5
   font_awesome_flutter: ^9.0.0
   country_code_picker: ^2.0.1
+  location_permissions: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
